--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,6 +1,6 @@
 <div class="menubar">
 <%= link_to "diary",root_path %>
-&nbsp;|&nbsp; <%= link_to "メンバー", "#" %>
+&nbsp;|&nbsp; <%= link_to "メンバーaaaaaaaa", "#" %>
 &nbsp;|&nbsp; <%= link_to "日記を書く",  "#" %>
 &nbsp;|&nbsp; <%= link_to "新規登録",  "#" %>
 &nbsp;|&nbsp; <%= link_to "ログイン", "#" %>
